Add Additional Resource Requests

--- a/dashboard/src/app/add-incident/add-incident.component.html
+++ b/dashboard/src/app/add-incident/add-incident.component.html
@@ -192,7 +192,7 @@
         </mat-menu>
 
         <mat-menu #C1C="matMenu">
-          <button mat-menu-item (click)="changeCategory('Insects')">C1C0</button>
+          <button mat-menu-item (click)="changeCategory('01A01')">01A01</button>
           <button mat-menu-item (click)="changeCategory('Molluscs')">C1C1</button>
         </mat-menu>
 
