--- a/dashboard/src/app/dispatcher/dispatcher.component.html
+++ b/dashboard/src/app/dispatcher/dispatcher.component.html
@@ -1,13 +1,8 @@
 <app-header title="Dispatcher"></app-header>
 <div class="container">
   <div class="section-1">
-    <div class="center-heading">
-
-      <p>Einsatz-Liste</p>
-      <button style="position:absolute; right: 3px;" mat-icon-button (click)="unselectIncident()"
-        [disabled]="selectedIncident === null" aria-label="Einsatz abwählen">
-        <mat-icon>deselect</mat-icon>
-      </button>
+    <div class="center-heading heading-coloring">
+      <p style="color: white">Einsatz-Liste</p>
     </div>
     <div class="section-vert-1 scrollsection" [ngClass]="{'section-vert-1-checked' : selectedIncident !== null}"
       style="border-bottom: 1px solid #ccc;">
@@ -17,48 +12,66 @@
         <ng-container matColumnDef="status">
           <th mat-header-cell *matHeaderCellDef mat-sort-header> Dispatch Status </th>
           <td mat-cell *matCellDef="let element">
-            <mat-icon *ngIf="element.status == 'DISPATCHED'" class="check" fontIcon="check"></mat-icon>
-            <mat-icon *ngIf="element.status != 'DISPATCHED'" class="notcheck" fontIcon="close"></mat-icon>
+            <mat-icon *ngIf="element.state == 'DISPATCHED'" class="check" fontIcon="check"></mat-icon>
+            <mat-icon *ngIf="element.state != 'DISPATCHED'" class="notcheck" fontIcon="close"></mat-icon>
+            <mat-icon *ngIf="hasRequest(element)" matTooltip="Anfrage für zusätzliche Resourcen" style="margin-left: 5px; color: blue;" fontIcon="message"></mat-icon>
           </td>
         </ng-container>
 
         <!-- Location Column -->
         <ng-container matColumnDef="location" >
           <th mat-header-cell *matHeaderCellDef> Standort </th>
-          <td mat-cell *matCellDef="let element"> {{element.location.description.street}}, {{element.location.description.postalCode}} {{element.location.description.city}} </td>
+          <td mat-cell *matCellDef="let element"> {{element.location.address?.street}}, {{element.location.address.postalCode}} {{element.location.address.city}} </td>
         </ng-container>
 
         <!-- Classification Column -->
         <ng-container matColumnDef="class">
           <th mat-header-cell *matHeaderCellDef mat-sort-header> Klassifikation </th>
-          <td mat-cell *matCellDef="let element"> {{element.categorization.code}} </td>
+          <td mat-cell *matCellDef="let element"> {{element.code}} </td>
         </ng-container>
 
         <tr mat-row (click)="selectIncident(row)" [ngClass]="{'selected-incident': row.id == selectedIncident}"
           *matRowDef="let row; columns: displayedColumnsIncidents;"></tr>
       </table>
     </div>
-    <div class="center-heading">
-      <p>Ausgewählter Einsatz</p>
+    <div class="center-heading heading-coloring">
+      <p style="color: white">Ausgewählter Einsatz</p>
+      <button style="position:absolute; right: 3px;" mat-icon-button (click)="unselectIncident()"
+      [disabled]="selectedIncident === null" aria-label="Einsatz abwählen" matTooltip="Einsatz abwählen" >
+      <mat-icon [ngClass]="{'white-icon': selectedIncident !== null}">deselect</mat-icon>
+    </button>
     </div>
     <div class="section-vert-2 scrollsection" *ngIf="selectedIncident !== null">
       <mat-grid-list cols="5" rowHeight="50px">
         <mat-grid-tile colspan="2" class="incident-key">Dispatch Status</mat-grid-tile>
-        <mat-grid-tile colspan="3" class="incident-property">{{selectedIncidentData?.status}}</mat-grid-tile>
+        <mat-grid-tile colspan="3" class="incident-property">{{selectedIncidentData?.state}}</mat-grid-tile>
         <mat-grid-tile colspan="2" class="incident-key">Klassifikation</mat-grid-tile>
-        <mat-grid-tile colspan="3" class="incident-property">{{selectedIncidentData?.categorization?.code}}</mat-grid-tile>
+        <mat-grid-tile colspan="3" class="incident-property">{{selectedIncidentData?.code}}</mat-grid-tile>
+      </mat-grid-list>
+      <br *ngIf="hasRequest(selectedIncidentData!)">
+      <mat-grid-list *ngIf="hasRequest(selectedIncidentData!)"  cols="5" rowHeight="50px">
+        <mat-grid-tile colspan="5" class="incident-property" style="background-color: lightgrey;"><i>Zusätzliche Resourcenanfragen</i></mat-grid-tile>
+        <ng-container *ngFor="let request of getRequests(selectedIncidentData!)"> 
+          <mat-grid-tile colspan="2" class="key-normal">{{request.requestedResourceType}}</mat-grid-tile>
+          <mat-grid-tile colspan="2" class="key-normal">{{request.resourceId}}</mat-grid-tile>
+          <mat-grid-tile colspan="1" class="property">
+            <button (click)="finishRequest(request)" mat-icon-button aria-label="Resourcen-Anfrage abschließen">
+            <mat-icon style="color: blue">task_alt</mat-icon>
+          </button>
+        </mat-grid-tile>
+        </ng-container> 
       </mat-grid-list>
       <br>
       <mat-grid-list cols="5" rowHeight="50px">
         <mat-grid-tile colspan="5" class="incident-property" style="background-color: lightgrey;"><i>Standort</i></mat-grid-tile>
         <mat-grid-tile colspan="2" class="incident-key">PLZ</mat-grid-tile>
-        <mat-grid-tile colspan="3" class="incident-property">{{selectedIncidentData?.location?.description?.postalCode}}</mat-grid-tile>
+        <mat-grid-tile colspan="3" class="incident-property">{{selectedIncidentData?.location?.address?.postalCode}}</mat-grid-tile>
         <mat-grid-tile colspan="2" class="incident-key">Ort</mat-grid-tile>
-        <mat-grid-tile colspan="3" class="incident-property">{{selectedIncidentData?.location?.description?.city}}</mat-grid-tile>
+        <mat-grid-tile colspan="3" class="incident-property">{{selectedIncidentData?.location?.address?.city}}</mat-grid-tile>
         <mat-grid-tile colspan="2" class="incident-key">Straße</mat-grid-tile>
-        <mat-grid-tile colspan="3" class="incident-property">{{selectedIncidentData?.location?.description?.street}}</mat-grid-tile>
+        <mat-grid-tile colspan="3" class="incident-property">{{selectedIncidentData?.location?.address?.street}}</mat-grid-tile>
         <mat-grid-tile colspan="2" rowspan="2" class="incident-key">Zusätzliche Standortinformationen</mat-grid-tile>
-        <mat-grid-tile colspan="3" rowspan="2" class="incident-property">{{selectedIncidentData?.location?.description?.additionalInformation}}</mat-grid-tile>
+        <mat-grid-tile colspan="3" rowspan="2" class="incident-property">{{selectedIncidentData?.location?.address?.additionalInformation}}</mat-grid-tile>
       </mat-grid-list>
       <br>
       <mat-grid-list cols="6" rowHeight="50px">
@@ -75,8 +88,8 @@
     </div>
   </div>
   <div class="section-2">
-    <div class="center-heading">
-      <p>Resourcen</p>
+    <div class="center-heading heading-coloring">
+      <p style="color: white">Resourcen</p>
       <mat-slide-toggle  [(ngModel)]="showDispatched" matTooltip="Zugewiesene Resourcen anzeigen" style="position:absolute; right: 10px;">
       </mat-slide-toggle>
     </div>
