--- a/dashboard/src/app/calltaker/calltaker.component.html
+++ b/dashboard/src/app/calltaker/calltaker.component.html
@@ -24,7 +24,7 @@
     <!-- Location Column -->
     <ng-container matColumnDef="location" >
       <th mat-header-cell *matHeaderCellDef> Standort </th>
-      <td mat-cell *matCellDef="let element"> {{element.location.address.street}}, {{element.location.address.postalCode}} {{element.location.address.city}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.location?.address?.street}}, {{element.location?.address?.postalCode}} {{element.location?.address?.city}} </td>
     </ng-container>
 
     <!-- Classification Column -->
