--- a/dashboard/src/app/dispatcher/dispatcher.component.html
+++ b/dashboard/src/app/dispatcher/dispatcher.component.html
@@ -21,7 +21,7 @@
         <!-- Location Column -->
         <ng-container matColumnDef="location" >
           <th mat-header-cell *matHeaderCellDef> Standort </th>
-          <td mat-cell *matCellDef="let element"> {{element.location.address?.street}}, {{element.location.address.postalCode}} {{element.location.address.city}} </td>
+          <td mat-cell *matCellDef="let element"> {{element.location?.address?.street}}, {{element.location?.address?.postalCode}} {{element.location?.address?.city}} </td>
         </ng-container>
 
         <!-- Classification Column -->
@@ -51,7 +51,7 @@
       <br *ngIf="hasRequest(selectedIncidentData!)">
       <mat-grid-list *ngIf="hasRequest(selectedIncidentData!)"  cols="5" rowHeight="50px">
         <mat-grid-tile colspan="5" class="incident-property" style="background-color: lightgrey;"><i>Zusätzliche Resourcenanfragen</i></mat-grid-tile>
-        <ng-container *ngFor="let request of getRequests(selectedIncidentData!)"> 
+        <ng-container *ngFor="let request of getRequests(selectedIncidentData!)">
           <mat-grid-tile colspan="2" class="key-normal">{{request.requestedResourceType}}</mat-grid-tile>
           <mat-grid-tile colspan="2" class="key-normal">{{request.resourceId}}</mat-grid-tile>
           <mat-grid-tile colspan="1" class="property">
@@ -59,7 +59,7 @@
             <mat-icon style="color: blue">task_alt</mat-icon>
           </button>
         </mat-grid-tile>
-        </ng-container> 
+        </ng-container>
       </mat-grid-list>
       <br>
       <mat-grid-list cols="5" rowHeight="50px">
