--- a/dashboard/src/app/login/login.component.html
+++ b/dashboard/src/app/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="signin-content">
   <mat-card>
     <mat-card-content>
-      <form [formGroup]="form" (ngSubmit)="login()">
+      <form [formGroup]="form" (ngSubmit)="loginOauth()">
         <p>Bitte einloggen um fortzufahren</p>
         <mat-form-field class="full-width-input">
           <input matInput placeholder="User" formControlName="userName" required>
