--- a/dashboard/src/app/add-incident/add-incident.component.html
+++ b/dashboard/src/app/add-incident/add-incident.component.html
@@ -1,185 +1,34 @@
 <app-header [backButton]="true" backRoute="/calltaker" title="Neuer Einsatz"></app-header>
 <div class="container">
-
-  <mat-stepper #stepper>
-    <mat-step [stepControl]="locationForm">
-      <form [formGroup]="locationForm">
+  <mat-stepper #stepper (selectionChange)="handleSelectionChange($event.previouslySelectedStep.label)">
+    <mat-step label="{{ locationFormLabel }}">
         <ng-template matStepLabel>Standort</ng-template>
-        <div class="center-1">
-          <div class="map" (leafletMapReady)="onMapReady($event)" (leafletClick)="selectLocation($event)" leaflet
-               [leafletOptions]="options">
-          </div>
-          <div class="center-2">
-            <mat-form-field class="form-field">
-              <mat-label>Ort</mat-label>
-              <input matInput placeholder="Wien, Österreich" formControlName="city"/>
-            </mat-form-field>
-            <br>
-            <mat-form-field class="form-field">
-              <mat-label>Postleitzahl</mat-label>
-              <input matInput placeholder="1010" required formControlName="postalCode"/>
-            </mat-form-field>
-            <br>
-            <mat-form-field class="form-field">
-              <mat-label>Straße</mat-label>
-              <input matInput placeholder="Hauptstraße 1" formControlName="street"/>
-            </mat-form-field>
-            <br>
-            <mat-form-field class="form-field">
-              <mat-label>Zusätzliche Informationen</mat-label>
-              <textarea matInput placeholder="Nebengebäude, Stockwerk, etc."
-                        formControlName="additionalInformation"> </textarea>
-            </mat-form-field>
-
-
-          </div>
-        </div>
-
-      </form>
+        <location-form> </location-form>
     </mat-step>
-    <mat-step>
+    <mat-step label="{{ personsFormLabel }}">
       <ng-template matStepLabel>Personen</ng-template>
-      <div class="center">
-        <h3>AnruferIn:</h3>
-        <div>
-          <mat-form-field>
-            <mat-label>Name</mat-label>
-            <input matInput placeholder="Max Mustermann"/>
-          </mat-form-field>
-          <mat-form-field style="margin-left: 5px;">
-            <mat-label>Geschlecht</mat-label>
-            <mat-select>
-              <mat-option value="one">Männlich</mat-option>
-              <mat-option value="two">Weiblich</mat-option>
-              <mat-option value="three">Divers</mat-option>
-            </mat-select>
-          </mat-form-field>
-          <mat-form-field style="margin-left: 5px;">
-            <mat-label>Alter</mat-label>
-            <input type="number" matInput placeholder="20"/>
-          </mat-form-field>
-        </div>
-        <h3>Betroffene:</h3>
-        <div class="patient-table">
-          <table mat-table [dataSource]="patients" class="mat-elevation-z8">
-
-            <!--- Note that these columns can be defined in any order.
-              The actual rendered columns are set as a property on the row definition" -->
-
-            <!-- Age Column -->
-            <ng-container matColumnDef="age">
-              <th mat-header-cell *matHeaderCellDef> Alter</th>
-              <td mat-cell *matCellDef="let element">
-                <mat-form-field>
-                  <mat-label>Alter</mat-label>
-                  <input type="number" matInput placeholder="20" [(ngModel)]="element.age"/>
-                </mat-form-field>
-              </td>
-            </ng-container>
-
-            <!-- Sex Column -->
-            <ng-container matColumnDef="sex">
-              <th mat-header-cell *matHeaderCellDef> Geschlecht</th>
-              <td mat-cell *matCellDef="let element">
-                <mat-form-field>
-                  <mat-label>Geschlecht</mat-label>
-                  <mat-select [(value)]="element.sex">
-                    <mat-option value="MALE">Männlich</mat-option>
-                    <mat-option value="FEMALE">Weiblich</mat-option>
-                    <mat-option value="UNKNOWN">Unbekannt</mat-option>
-                  </mat-select>
-                </mat-form-field>
-              </td>
-            </ng-container>
-
-            <ng-container matColumnDef="remove">
-              <th mat-header-cell *matHeaderCellDef></th>
-              <td mat-cell *matCellDef="let element">
-                <button mat-icon-button aria-label="Person entfernen" (click)="removePatient(element)">
-                  <mat-icon>delete</mat-icon>
-                </button>
-              </td>
-            </ng-container>
-
-            <tr mat-row *matRowDef="let row; columns: displayedColumnsPatients;"></tr>
-          </table>
-        </div>
-        <button (click)="addPatient()" mat-icon-button aria-label="Person hinzufügen">
-          <mat-icon>add</mat-icon>
-        </button>
-
-      </div>
+        <persons-form> </persons-form>
     </mat-step>
 
-    <mat-step>
+    <mat-step label="{{ questionsFormLabel }}">
       <ng-template matStepLabel>Fragen</ng-template>
-      <mat-tab-group [selectedIndex]="selectedIndex" (selectedIndexChange)="changeIndex($event)">
-        <mat-tab>
-          <ng-template mat-tab-label>
-            <mat-icon class="check">check</mat-icon>
-            First
-          </ng-template>
-          <div class="tab-center">
-            <h3>Frage 1:</h3>
-            <mat-radio-group class="radio-group">
-
-              <mat-radio-button class="radio-button" color="primary">Option 1</mat-radio-button>
-              <mat-radio-button class="radio-button" color="primary">Option 2</mat-radio-button>
-              <mat-radio-button class="radio-button" color="primary">Option 3</mat-radio-button>
-
-            </mat-radio-group>
-            <button mat-flat-button color="primary" (click)="changeIndex(1)">Bestätigen</button>
-          </div>
-        </mat-tab>
-
-        <mat-tab>
-          <ng-template mat-tab-label>
-            <mat-icon class="check">check</mat-icon>
-            Second
-          </ng-template>
-          <div class="tab-center">
-            <h3>Frage 2:</h3>
-            <mat-form-field>
-              <mat-label>Select</mat-label>
-              <mat-select>
-                <mat-option value="one">First option</mat-option>
-                <mat-option value="two">Second option</mat-option>
-              </mat-select>
-            </mat-form-field>
-            <button mat-flat-button color="primary" (click)="changeIndex(2)">Bestätigen</button>
-          </div>
-        </mat-tab>
-
-        <mat-tab>
-          <ng-template mat-tab-label>
-            <mat-icon class="notcheck">close</mat-icon>
-            Third
-          </ng-template>
-          <div class="tab-center">
-            <h3>Frage 3:</h3>
-            <mat-form-field>
-              <mat-label>Select</mat-label>
-              <mat-select>
-                <mat-option value="one">First option</mat-option>
-                <mat-option value="two">Second option</mat-option>
-              </mat-select>
-            </mat-form-field>
-            <button mat-flat-button color="primary" matStepperNext>Bestätigen</button>
-          </div>
-        </mat-tab>
-      </mat-tab-group>
+      <questions-form> </questions-form>
     </mat-step>
+
     <mat-step>
       <ng-template matStepLabel>Klassifikation</ng-template>
-      <div class="center-last">
+
+      <div class="center" *ngIf="recommendedCategory">
         <p>Empfehlung des Klassifizierungssystems: </p>
-        <span style="font-size: 20px; margin-top: 5px;"><b>{{ recommendedCategory }}</b></span>
+        <span style="font-size: 20px; margin: 0 0 5px 0;"><b>{{ recommendedCategory }}</b></span>
         <br>
         <mat-divider style="width: 400px"></mat-divider>
         <br>
+      </div>
+      <div class="center-last">
         <span style="margin-top: 5px;">Ausgewählt:</span>
-        <button style="margin-top: 10px" mat-raised-button [matMenuTriggerFor]="categories">
-          <span style="font-size: 20px;">{{ selectedCategory }}</span>
+        <button style="margin: 10px 0 10px 0;" mat-raised-button [matMenuTriggerFor]="categories">
+          <span style="font-size: 20px;">{{ selectedCategory ? selectedCategory : "Kategorie auswählen" }}</span>
         </button>
         <mat-menu #categories="matMenu">
           <button mat-menu-item [matMenuTriggerFor]="C0T">Kategorie 0</button>
@@ -192,8 +41,8 @@
         </mat-menu>
 
         <mat-menu #C1C="matMenu">
-          <button mat-menu-item (click)="changeCategory('01A01')">01A01</button>
-          <button mat-menu-item (click)="changeCategory('Molluscs')">C1C1</button>
+          <button mat-menu-item (click)="changeCategory('C1C0')">C1C0</button>
+          <button mat-menu-item (click)="changeCategory('C1C1')">C1C1</button>
         </mat-menu>
 
         <mat-menu #C0T0C="matMenu">
@@ -208,17 +57,18 @@
         <br>
         <mat-divider style="width: 400px"></mat-divider>
 
-        <div class="center">
+        <div *ngIf="loadSummary()" class="center" style="margin: 0 0 5px 0;">
           <p>Zusammenfassung des Befragungsschemas</p>
           <mat-chip-set aria-label="Fish selection">
-            <mat-chip>3 verletzte Personen</mat-chip>
-            <mat-chip>Schnittwunden</mat-chip>
-            <mat-chip>Schwer zugänglich</mat-chip>
-            <mat-chip>Bewusstlos</mat-chip>
+            <mat-chip *ngFor="let tag of summaryTags">{{ tag }}</mat-chip>
           </mat-chip-set>
         </div>
         <br>
-        <button mat-flat-button color="primary" (click)="saveIncident()" matStepperNext>Einsatz speichern</button>
+        <button [disabled]="!categorySet() || !locationCoordinatesSet()" mat-flat-button color="primary" (click)="saveIncident()" matStepperNext>Einsatz speichern</button>
+        <div style="color: red; text-align: center">
+          <p *ngIf="!categorySet()">Es muss eine Kategorie gesetzt sein!</p>
+          <p *ngIf="!locationCoordinatesSet()">Es müssen Einsatzkoordinaten gesetzt sein!</p>
+        </div>
       </div>
     </mat-step>
   </mat-stepper>
