--- a/dashboard/src/app/calltaker/calltaker.component.html
+++ b/dashboard/src/app/calltaker/calltaker.component.html
@@ -24,7 +24,7 @@
     <!-- Location Column -->
     <ng-container matColumnDef="location" >
       <th mat-header-cell *matHeaderCellDef> Standort </th>
-      <td mat-cell *matCellDef="let element"> {{element.location?.address?.street}}, {{element.location?.address?.postalCode}} {{element.location?.address?.city}} </td>
+      <td mat-cell *matCellDef="let element">{{ prettyLocationAddress(element.location.address) }}</td>
     </ng-container>
 
     <!-- Classification Column -->
@@ -32,12 +32,6 @@
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Klassifikation </th>
       <td mat-cell *matCellDef="let element"> {{element.code}} </td>
     </ng-container>
-
-    <!-- Time Column -->
-<!--    <ng-container matColumnDef="time">-->
-<!--      <th mat-header-cell *matHeaderCellDef mat-sort-header> Uhrzeit </th>-->
-<!--      <td mat-cell *matCellDef="let element"> {{element.time}} </td>-->
-<!--    </ng-container>-->
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
     <tr mat-row (click)="showDetail(row)" *matRowDef="let row; columns: displayedColumns;"></tr>
