--- a/dashboard/src/app/pages/add-incident/questions-form/questions-form.component.html
+++ b/dashboard/src/app/pages/add-incident/questions-form/questions-form.component.html
@@ -1,55 +1,55 @@
-<mat-tab-group [selectedIndex]="selectedIndex" (selectedIndexChange)="changeIndex($event)">
+<mat-tab-group [selectedIndex]="selectedIndex" (selectedIndexChange)="changeIndex($event)" *ngIf="isSelectionQuestionDefined()">
   <mat-tab>
     <ng-template mat-tab-label>
-      <mat-icon class="check">check</mat-icon>
-      First
+      <mat-icon *ngIf="isSelectionQuestionAnswered()" class="check">check</mat-icon>
+      <mat-icon *ngIf="!isSelectionQuestionAnswered()" class="notcheck">close</mat-icon>
+      Protokoll
     </ng-template>
     <div class="tab-center">
-      <h3>Frage 1:</h3>
+      <h3>{{ getSelectionQuestion()?.baseQuestion?.text }}</h3>
       <mat-radio-group class="radio-group">
 
-        <mat-radio-button class="radio-button" color="primary">Option 1</mat-radio-button>
-        <mat-radio-button class="radio-button" color="primary">Option 2</mat-radio-button>
-        <mat-radio-button class="radio-button" color="primary">Option 3</mat-radio-button>
+        <mat-radio-button *ngFor="let option of getSelectionQuestion()?.baseQuestion?.fields?.at(0)!.options" class="radio-button" color="primary">{{ option }}</mat-radio-button>
 
       </mat-radio-group>
-      <button mat-flat-button color="primary" (click)="changeIndex(1)">Bestätigen</button>
+      <button mat-flat-button color="primary" (click)="answerSelectionQuestion('1-Bauchschmerzen/-beschwerden')">Bestätigen</button>
     </div>
   </mat-tab>
 
-  <mat-tab>
+  <mat-tab *ngFor="let protocolQuestion of getProtocolQuestions(); let i = index" [attr.data-index]="i">
     <ng-template mat-tab-label>
-      <mat-icon class="check">check</mat-icon>
-      Second
+      <mat-icon *ngIf="isProtocolQuestionAnswerd(protocolQuestion.id)" class="check">check</mat-icon>
+      <mat-icon *ngIf="!isProtocolQuestionAnswerd(protocolQuestion.id)" class="notcheck">close</mat-icon>
+      Protokoll Frage {{ i + 1 }}
     </ng-template>
     <div class="tab-center">
-      <h3>Frage 2:</h3>
+      <h3>{{ protocolQuestion.text }}</h3>
       <mat-form-field>
-        <mat-label>Select</mat-label>
+        <mat-label>Auswählen</mat-label>
         <mat-select>
           <mat-option value="one">First option</mat-option>
           <mat-option value="two">Second option</mat-option>
         </mat-select>
       </mat-form-field>
-      <button mat-flat-button color="primary" (click)="changeIndex(2)">Bestätigen</button>
+      <button mat-flat-button color="primary" (click)="changeIndex(selectedIndex + 1)">Bestätigen</button>
     </div>
   </mat-tab>
 
-  <mat-tab>
-    <ng-template mat-tab-label>
-      <mat-icon class="notcheck">close</mat-icon>
-      Third
-    </ng-template>
-    <div class="tab-center">
-      <h3>Frage 3:</h3>
-      <mat-form-field>
-        <mat-label>Select</mat-label>
-        <mat-select>
-          <mat-option value="one">First option</mat-option>
-          <mat-option value="two">Second option</mat-option>
-        </mat-select>
-      </mat-form-field>
-      <button mat-flat-button color="primary">Bestätigen</button>
-    </div>
-  </mat-tab>
+<!--  <mat-tab>-->
+<!--    <ng-template mat-tab-label>-->
+<!--      <mat-icon class="notcheck">close</mat-icon>-->
+<!--      Third-->
+<!--    </ng-template>-->
+<!--    <div class="tab-center">-->
+<!--      <h3>Frage 3:</h3>-->
+<!--      <mat-form-field>-->
+<!--        <mat-label>Select</mat-label>-->
+<!--        <mat-select>-->
+<!--          <mat-option value="one">First option</mat-option>-->
+<!--          <mat-option value="two">Second option</mat-option>-->
+<!--        </mat-select>-->
+<!--      </mat-form-field>-->
+<!--      <button mat-flat-button color="primary">Bestätigen</button>-->
+<!--    </div>-->
+<!--  </mat-tab>-->
 </mat-tab-group>
