--- a/dashboard/src/app/pages/add-incident/questions-form/questions-form.component.html
+++ b/dashboard/src/app/pages/add-incident/questions-form/questions-form.component.html
@@ -7,12 +7,21 @@
     </ng-template>
     <div class="tab-center">
       <h3>{{ getSelectionQuestion()?.baseQuestion?.text }}</h3>
-      <mat-radio-group class="radio-group">
+      <mat-form-field style="width: 400px">
 
-        <mat-radio-button *ngFor="let option of getSelectionQuestion()?.baseQuestion?.fields?.at(0)!.options" class="radio-button" color="primary">{{ option }}</mat-radio-button>
+        <mat-select [(ngModel)]="selectionQuestionOption">
+          <mat-option *ngFor="let option of getSelectionQuestion()?.baseQuestion?.fields?.at(0)!.options" [value]="option">{{ option }}</mat-option>
+        </mat-select>
 
-      </mat-radio-group>
-      <button mat-flat-button color="primary" (click)="answerSelectionQuestion('1-Bauchschmerzen/-beschwerden')">Bestätigen</button>
+<!--        <mat-radio-button-->
+<!--          *ngFor="let option of getSelectionQuestion()?.baseQuestion?.fields?.at(0)!.options"-->
+<!--          class="radio-button"-->
+<!--          color="primary" value="{{ option }}">-->
+<!--            {{ option }}-->
+<!--        </mat-radio-button>-->
+
+      </mat-form-field>
+      <button mat-flat-button color="primary" (click)="answerSelectionQuestion(selectionQuestionOption)">Bestätigen</button>
     </div>
   </mat-tab>
 
@@ -24,14 +33,22 @@
     </ng-template>
     <div class="tab-center">
       <h3>{{ protocolQuestion.text }}</h3>
-      <mat-form-field>
-        <mat-label>Auswählen</mat-label>
-        <mat-select>
-          <mat-option value="one">First option</mat-option>
-          <mat-option value="two">Second option</mat-option>
-        </mat-select>
-      </mat-form-field>
-      <button mat-flat-button color="primary" (click)="changeIndex(selectedIndex + 1)">Bestätigen</button>
+      <div *ngFor="let field of protocolQuestion.fields!">
+        <mat-form-field *ngIf="field.type == FieldType.SINGLE_CHOICE">
+          <mat-label>Auswählen</mat-label>
+          <mat-select [(ngModel)]="selectedProtocolOptions[protocolQuestion.protocolId][protocolQuestion.id][field.fieldId]">
+            <mat-option *ngFor="let option of field.options" [value]="option.text">{{ option.text }}</mat-option>
+          </mat-select>
+        </mat-form-field>
+      </div>
+
+      <button mat-flat-button color="primary"
+              (click)="answerProtocolQuestion(
+              protocolQuestion,
+              selectedProtocolOptions[protocolQuestion.protocolId][protocolQuestion.id],
+              selectedIndex + 1)">
+        Bestätigen
+      </button>
     </div>
   </mat-tab>
 
