added editing of incident

--- a/dashboard/src/app/pages/edit-incident/edit-incident.component.css
+++ b/dashboard/src/app/pages/edit-incident/edit-incident.component.css
@@ -32,6 +32,14 @@
   border-left: 1px solid lightgray;
 }
 
+.center-last {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+}
+
 .tab-center {
   display: flex;
   align-items: center;
@@ -53,6 +61,10 @@
 
 .check {
   color: green;
+}
+
+.done {
+  color: blue;
 }
 
 .notcheck {
@@ -83,6 +95,6 @@
   margin: 5px;
 }
 
-.person-table{
-  width: 800px;
+.patient-table{
+  width: 600px;
 }
