Resolve "Feature 10 UI Localization"

--- a/dashboard/src/app/components/confirm-dialog/confirm-dialog.component.html
+++ b/dashboard/src/app/components/confirm-dialog/confirm-dialog.component.html
@@ -7,6 +7,6 @@
   </mat-dialog-content>
   
   <mat-dialog-actions>
-    <button mat-button (click)="onDismiss()">Nein</button>
-    <button mat-raised-button color="primary" (click)="onConfirm()" cdkFocusInitial>Ja</button>
+    <button mat-button (click)="onDismiss()">{{ 'DIALOG.CANCEL' | translate }}</button>
+    <button mat-raised-button color="primary" (click)="onConfirm()" cdkFocusInitial>{{ 'DIALOG.CONFIRM' | translate }}</button>
   </mat-dialog-actions>
