--- a/dashboard/src/app/pages/calltaker/calltaker.component.css
+++ b/dashboard/src/app/pages/calltaker/calltaker.component.css
@@ -40,5 +40,14 @@
     border-color: currentColor;
     background-color: lightgray;
   }
+
+.no-data{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100px;
+    font-size: 20px;
+    color: #9e9e9e;
+}
   
   
