--- a/dashboard/src/app/pages/calltaker/calltaker.component.html
+++ b/dashboard/src/app/pages/calltaker/calltaker.component.html
@@ -1,6 +1,6 @@
 <app-header title="Call-Taker"></app-header>
 <div class="button-container">
-<button class="main-button" mat-flat-button color="primary" (click)="performMainAction()">Neuer Einsatz</button>
+<button class="main-button" mat-flat-button color="primary" (click)="performMainAction()">{{ 'CALLTAKER.NEW_INCIDENT' | translate }}</button>
 <form class="example-form" style="margin-left: 40px; margin-top: 20px;">
   <mat-form-field>
     <input matInput type="text" (keyup)="doFilter($event)" placeholder="Filter">
@@ -14,26 +14,29 @@
   <table mat-table matSort [dataSource]="dataSource" class="mat-elevation-z8 demo-table">
     <!-- Status Column -->
     <ng-container matColumnDef="status">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Dispatch Status </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> {{ 'CALLTAKER.DISPATCH_STATE' | translate }} </th>
       <td mat-cell *matCellDef="let element">
-        <mat-icon *ngIf="element.state == 'DISPATCHED'" class="check" fontIcon="check"></mat-icon>
-        <mat-icon *ngIf="element.state != 'DISPATCHED'" class="notcheck" fontIcon="close"></mat-icon>
+        <mat-icon *ngIf="element.state == 'DISPATCHED'" class="check" fontIcon="check_circle"></mat-icon>
+        <mat-icon *ngIf="element.state != 'DISPATCHED'" class="notcheck" fontIcon="circle"></mat-icon>
       </td>
     </ng-container>
 
     <!-- Location Column -->
     <ng-container matColumnDef="location" >
-      <th mat-header-cell *matHeaderCellDef> Standort </th>
+      <th mat-header-cell *matHeaderCellDef> {{ 'CALLTAKER.LOCATION' | translate }}</th>
       <td mat-cell *matCellDef="let element">{{ prettyLocationAddress(element.location.address) }}</td>
     </ng-container>
 
     <!-- Classification Column -->
     <ng-container matColumnDef="class">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Klassifikation </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> {{ 'CALLTAKER.CLASSIFICATION' | translate }}  </th>
       <td mat-cell *matCellDef="let element"> {{element.code}} </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
     <tr mat-row (click)="showDetail(row)" *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
+  <div *ngIf="dataSource?.data?.length == 0">
+    <div class="no-data">{{ 'CALLTAKER.NO_INCIDENTS' | translate }}</div>
+  </div>
   </div>
