--- a/dashboard/src/app/pages/dispatcher/dispatcher.component.css
+++ b/dashboard/src/app/pages/dispatcher/dispatcher.component.css
@@ -61,6 +61,7 @@
     height: calc(60vh - 50px);
     width: 100%;
     overflow-y: scroll;
+    overflow-x: hidden;
   }
 
   .section-vert-3 {
@@ -133,7 +134,7 @@
   background-color: lightgray;
 }
 
-.map {
+#map {
   height: 100%;
   width: 100%;
   padding: 0;
@@ -181,4 +182,21 @@
 
 .white-icon{
   color: white;
+}
+
+.complete-button{
+  display:block; 
+  margin-left: auto; 
+  margin-right: auto;
+  width: 30%;
+  min-width: 150px;
+}
+
+.no-data{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100px;
+  font-size: 20px;
+  color: #9e9e9e;
 }
