--- a/dashboard/src/app/pages/dispatcher/dispatcher.component.html
+++ b/dashboard/src/app/pages/dispatcher/dispatcher.component.html
@@ -2,7 +2,7 @@
 <div class="container">
   <div class="section-1">
     <div class="center-heading heading-coloring">
-      <p style="color: white">Einsatz-Liste</p>
+      <p style="color: white">{{ 'DISPATCHER.INCIDENT_LIST' | translate }}</p>
     </div>
     <div class="section-vert-1 scrollsection" [ngClass]="{'section-vert-1-checked' : selectedIncident !== null}"
       style="border-bottom: 1px solid #ccc;">
@@ -12,8 +12,8 @@
         <ng-container matColumnDef="status">
           <th mat-header-cell *matHeaderCellDef mat-sort-header> Dispatch Status </th>
           <td mat-cell *matCellDef="let element">
-            <mat-icon *ngIf="element.state == 'DISPATCHED'" class="check" fontIcon="check"></mat-icon>
-            <mat-icon *ngIf="element.state != 'DISPATCHED'" class="notcheck" fontIcon="close"></mat-icon>
+            <mat-icon *ngIf="element.state == 'DISPATCHED'" class="check" fontIcon="check_circle"></mat-icon>
+            <mat-icon *ngIf="element.state != 'DISPATCHED'" class="notcheck" fontIcon="circle"></mat-icon>
             <mat-icon *ngIf="hasRequest(element)" matTooltip="Anfrage für zusätzliche Resourcen"
               style="margin-left: 5px; color: blue;" fontIcon="message"></mat-icon>
           </td>
@@ -34,25 +34,28 @@
         <tr mat-row (click)="selectIncident(row)" [ngClass]="{'selected-incident': row.id == selectedIncident}"
           *matRowDef="let row; columns: displayedColumnsIncidents;"></tr>
       </table>
+      <div *ngIf="incidents?.length == 0">
+        <div class="no-data">{{ 'DISPATCHER.NO_INCIDENTS' | translate }}</div>
+      </div>
+      
     </div>
     <div class="center-heading heading-coloring">
-      <p style="color: white">Ausgewählter Einsatz</p>
+      <p style="color: white">{{ 'DISPATCHER.SELECTED_INCIDENT' | translate }}</p>
       <button style="position:absolute; right: 3px;" mat-icon-button (click)="unselectIncident()"
-        [disabled]="selectedIncident === null" aria-label="Einsatz abwählen" matTooltip="Einsatz abwählen">
+        [disabled]="selectedIncident === null" aria-label="Einsatz abwählen" [matTooltip]="'DISPATCHER.TOOLTIP_DESELECT_INCIDENT' | translate">
         <mat-icon [ngClass]="{'white-icon': selectedIncident !== null}">deselect</mat-icon>
       </button>
     </div>
     <div class="section-vert-2 scrollsection" *ngIf="selectedIncident !== null">
       <mat-grid-list cols="5" rowHeight="50px">
-        <mat-grid-tile colspan="2" class="incident-key">Dispatch Status</mat-grid-tile>
+        <mat-grid-tile colspan="2" class="incident-key">{{ 'DISPATCHER.SELECT.DISPATCH_STATE' | translate }}</mat-grid-tile>
         <mat-grid-tile colspan="3" class="incident-property">{{selectedIncidentData?.state}}</mat-grid-tile>
-        <mat-grid-tile colspan="2" class="incident-key">Klassifikation</mat-grid-tile>
+        <mat-grid-tile colspan="2" class="incident-key">{{ 'DISPATCHER.SELECT.CLASSIFICATION' | translate }}</mat-grid-tile>
         <mat-grid-tile colspan="3" class="incident-property">{{selectedIncidentData?.code}}</mat-grid-tile>
       </mat-grid-list>
       <br *ngIf="hasRequest(selectedIncidentData!)">
       <mat-grid-list *ngIf="hasRequest(selectedIncidentData!)" cols="5" rowHeight="50px">
-        <mat-grid-tile colspan="5" class="incident-property" style="background-color: lightgrey;"><i>Zusätzliche
-            Resourcenanfragen</i></mat-grid-tile>
+        <mat-grid-tile colspan="5" class="incident-property" style="background-color: lightgrey;"><i>{{ 'DISPATCHER.SELECT.REQUESTS' | translate }}</i></mat-grid-tile>
         <ng-container *ngFor="let request of getRequests(selectedIncidentData!)">
           <mat-grid-tile colspan="2" class="key-normal">{{request.requestedResourceType}}</mat-grid-tile>
           <mat-grid-tile colspan="2" class="key-normal">{{request.resourceId}}</mat-grid-tile>
@@ -66,40 +69,42 @@
       <br>
       <mat-grid-list cols="5" rowHeight="50px">
         <mat-grid-tile colspan="5" class="incident-property"
-          style="background-color: lightgrey;"><i>Standort</i></mat-grid-tile>
-        <mat-grid-tile colspan="2" class="incident-key">PLZ</mat-grid-tile>
+          style="background-color: lightgrey;"><i>{{ 'DISPATCHER.SELECT.LOCATION' | translate }}</i></mat-grid-tile>
+        <mat-grid-tile colspan="2" class="incident-key">{{ 'DISPATCHER.SELECT.POSTAL_CODE' | translate }}</mat-grid-tile>
         <mat-grid-tile colspan="3"
           class="incident-property">{{selectedIncidentData?.location?.address?.postalCode}}</mat-grid-tile>
-        <mat-grid-tile colspan="2" class="incident-key">Ort</mat-grid-tile>
+        <mat-grid-tile colspan="2" class="incident-key">{{ 'DISPATCHER.SELECT.CITY' | translate }}</mat-grid-tile>
         <mat-grid-tile colspan="3"
           class="incident-property">{{selectedIncidentData?.location?.address?.city}}</mat-grid-tile>
-        <mat-grid-tile colspan="2" class="incident-key">Straße</mat-grid-tile>
+        <mat-grid-tile colspan="2" class="incident-key">{{ 'DISPATCHER.SELECT.STREET' | translate }}</mat-grid-tile>
         <mat-grid-tile colspan="3"
           class="incident-property">{{selectedIncidentData?.location?.address?.street}}</mat-grid-tile>
-        <mat-grid-tile colspan="2" rowspan="2" class="incident-key">Zusätzliche Standortinformationen</mat-grid-tile>
+        <mat-grid-tile colspan="2" rowspan="2" class="incident-key">{{ 'DISPATCHER.SELECT.LOCATION_ADDITIONAL' | translate }}</mat-grid-tile>
         <mat-grid-tile colspan="3" rowspan="2"
           class="incident-property">{{selectedIncidentData?.location?.address?.additionalInformation}}</mat-grid-tile>
       </mat-grid-list>
       <br>
       <mat-grid-list cols="6" rowHeight="50px">
         <mat-grid-tile colspan="6" class="incident-property"
-          style="background-color: lightgrey;"><i>AnruferIn</i></mat-grid-tile>
+          style="background-color: lightgrey;"><i>{{ 'DISPATCHER.SELECT.CALLEE' | translate }}</i></mat-grid-tile>
         <mat-grid-tile colspan="3" class="key-normal">Max Mustermann</mat-grid-tile>
         <mat-grid-tile colspan="3" class="key-normal">+43 000 00000000</mat-grid-tile>
-        <mat-grid-tile colspan="6" class="incident-property" style="background-color: lightgrey;"><i>Betroffene
+        <mat-grid-tile colspan="6" class="incident-property" style="background-color: lightgrey;"><i>{{ 'DISPATCHER.SELECT.AFFECTED' | translate }}
             ({{selectedIncidentData?.numberOfPatients}})</i> </mat-grid-tile>
         <ng-container *ngFor="let patient of selectedIncidentData?.patients">
           <mat-grid-tile colspan="3" class="key-normal">{{patient.sex}}</mat-grid-tile>
           <mat-grid-tile colspan="3" class="property">{{patient.age}}</mat-grid-tile>
         </ng-container>
       </mat-grid-list>
+      <br>
+      <button mat-flat-button color="accent" class="complete-button" (click)="completeIncident(selectedIncident)">{{ 'DISPATCHER.COMPLETE_BUTTON' | translate }}</button>
     </div>
   </div>
   <div class="section-2">
     <div class="center-heading heading-coloring">
-      <p style="color: white">Resourcen</p>
+      <p style="color: white">{{ 'DISPATCHER.RESOURCES' | translate }}</p>
       <mat-slide-toggle [(ngModel)]="showDispatched" (ngModelChange)="showLocations()"
-        matTooltip="Zugewiesene Resourcen anzeigen" style="position:absolute; right: 10px;">
+      [matTooltip]="'DISPATCHER.TOOLTIP_RESOURCE_TOGGLE' | translate" style="position:absolute; right: 10px;">
       </mat-slide-toggle>
     </div>
 
@@ -108,8 +113,7 @@
       Dispatch
     </button>
 
-    <mat-tab-group class="resource-tabs">
-      <mat-tab label="Standard">
+
         <div class="section-vert-3 scrollsection">
 
           <table mat-table [dataSource]="resources" class="mat-elevation-z8">
@@ -127,7 +131,7 @@
             <ng-container matColumnDef="type">
               <th mat-header-cell *matHeaderCellDef> Type </th>
               <td mat-cell *matCellDef="let element"> <span *ngIf="recommended.has(element.id)"
-                  style="color: green;">Empfohlen <br></span> {{element.type}} </td>
+                  style="color: green;">{{'DISPATCHER.RECOMMENDED' | translate}} <br></span> {{element.type}} </td>
             </ng-container>
 
             <ng-container matColumnDef="status">
@@ -172,78 +176,17 @@
               [ngClass]="{'hidden': !showDispatched && row.assignedIncident && (row.assignedIncident != selectedIncident)}">
             </tr>
           </table>
+
+          <div *ngIf="resources?.length == 0">
+            <div class="no-data">{{ 'DISPATCHER.NO_RESOURCES' | translate }}</div>
+          </div>
         </div>
 
-      </mat-tab>
-      <mat-tab label="Zusätzlich">
-
-        <div class="section-vert-3 scrollsection">
-
-          <table mat-table [dataSource]="resourcesAdditional" class="mat-elevation-z8">
-
-            <ng-container matColumnDef="location">
-              <th mat-header-cell *matHeaderCellDef> Location </th>
-              <td mat-cell *matCellDef="let element"> {{element.locationCoordinates}} </td>
-            </ng-container>
-
-            <ng-container matColumnDef="id">
-              <th mat-header-cell *matHeaderCellDef> ID </th>
-              <td mat-cell *matCellDef="let element"> {{element.id}} </td>
-            </ng-container>
-
-            <ng-container matColumnDef="type">
-              <th mat-header-cell *matHeaderCellDef> Type </th>
-              <td mat-cell *matCellDef="let element"> {{element.type}} </td>
-            </ng-container>
-
-            <ng-container matColumnDef="status">
-              <th mat-header-cell *matHeaderCellDef> Status </th>
-              <td mat-cell *matCellDef="let element">
-                <mat-icon *ngIf="element.assignedIncident && element.assignedIncident != selectedIncident"
-                  class="notcheck" fontIcon="crisis_alert"></mat-icon>
-                <mat-icon *ngIf="element.assignedIncident && element.assignedIncident == selectedIncident"
-                  style="color: blue" fontIcon="check_circle_outline"></mat-icon>
-                <mat-icon *ngIf="!element.assignedIncident" class="check" fontIcon="house"></mat-icon>
-              </td>
-            </ng-container>
-
-            <ng-container matColumnDef="locate">
-              <th mat-header-cell *matHeaderCellDef> Locate </th>
-              <td mat-cell *matCellDef="let element">
-                <button mat-icon-button aria-label="Resource lokalisieren" (click)="zoomToLocation(element.locationCoordinates)">
-                  <mat-icon>location_pin</mat-icon>
-                </button>
-              </td>
-            </ng-container>
-
-            <ng-container matColumnDef="assign">
-              <th mat-header-cell *matHeaderCellDef>assign</th>
-              <td mat-cell *matCellDef="let element">
-                <button *ngIf="!assignedResources?.includes(element.id)" (click)="assignResource(element)" mat-icon-button
-                  [disabled]="selectedIncident === null || element.assignedIncident === selectedIncident"
-                  aria-label="Ressource zuweisen">
-                  <mat-icon>add</mat-icon>
-                </button>
-                <button *ngIf="assignedResources?.includes(element.id)" (click)="unassignResource(element)" mat-icon-button
-                  [disabled]="selectedIncident === null || element.assignedIncident === selectedIncident"
-                  aria-label="Ressource abwählen">
-                  <mat-icon class="notcheck">remove_circle_outline</mat-icon>
-                </button>
-              </td>
-            </ng-container>
-
-            <tr mat-row *matRowDef="let row; columns: displayedColumnsResourcesAdditional;"
-              [ngClass]="{'hidden': !showDispatched && row.assignedIncident && (row.assignedIncident != selectedIncident)}">
-            </tr>
-          </table>
-        </div>
-
-      </mat-tab>
-    </mat-tab-group>
+     
 
   </div>
   <div class="section-3">
-    <div class="map" leaflet [leafletOptions]="options" (leafletMapReady)="onMapReady($event)">
+    <div id="map" leaflet [leafletOptions]="options" (leafletMapReady)="onMapReady($event)">
     </div>
   </div>
 </div>
