--- a/dashboard/src/app/pages/login/login.component.html
+++ b/dashboard/src/app/pages/login/login.component.html
@@ -2,7 +2,7 @@
   <mat-card>
     <mat-card-content>
       <form [formGroup]="form" (ngSubmit)="loginOauth()">
-        <p>Bitte einloggen um fortzufahren</p>
+        <p>{{ 'LOGIN' | translate }}</p>
         <mat-form-field class="full-width-input">
           <input matInput placeholder="User" formControlName="userName" required>
         </mat-form-field>
